# siesta

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: experiment_parameters.yaml  params.yaml
data/: 2023-02-15--18-44-29_dataset.csv  2023-02-15--18-45-12_dataset.csv  2023-02-16--10-16-30_dataset.csv  2023-02-16--14-37-49_dataset.csv  2023-02-16--15-23-48_dataset.csv  2023-02-20--11-31-40_dataset.csv  2023-02-20--13-44-03_dataset.csv  2023-02-20--14-15-13_dataset.csv  2023-02-20--14-15-47_dataset.csv  2023-02-20--14-58-08_dataset.csv  2023-02-20--15-57-48_dataset.csv  2023-02-20--16-07-47_dataset.csv  2023-02-20--16-13-06_dataset.csv  2023-02-20--16-35-22_dataset.csv  2023-02-21--09-18-17_dataset.csv  2023-02-21--11-42-23_dataset.csv  2023-02-21--13-15-53_dataset.csv  2023-02-21--13-29-42_dataset.csv  2023-02-21--14-05-03_dataset.csv  2023-02-21--14-07-47_dataset.csv  2023-02-21--14-08-27_dataset.csv
data/evaluation/: 23-05-30--13-09-59_400Hz-L9-step.csv  23-05-30--13-11-45_400Hz-L9-ramp.csv  23-05-30--13-12-49_400Hz-L9-chrp.csv
data/evaluation/0-step/: 23-05-30--14-22-24_400Hz-L9-step_pd.csv  23-05-30--14-27-00_400Hz-L9-step_nn.csv  23-05-30--14-59-02_400Hz-L9-step_real.csv  23-05-30--15-13-54_400Hz-L9-step_pd.csv  23-05-30--15-26-35_400Hz-L9-step_nn.csv  23-06-04--12-04-36_400Hz-L9-step_nnposerr.csv  23-06-05--10-27-01_400Hz-L9-step_nnpos.csv
data/evaluation/1-ramp/: 23-05-30--15-00-09_400Hz-L9-ramp_real.csv  23-06-01--08-42-54_400Hz-L9-ramp_pd.csv  23-06-04--12-05-50_400Hz-L9-ramp_nnposerr.csv  23-06-05--10-28-39_400Hz-L9-ramp_nnpos.csv
data/evaluation/2-chrp/: 23-05-30--15-02-44_400Hz-L9-chrp_real.csv  23-06-01--08-44-04_400Hz-L9-chrp_pd.csv  23-06-03--14-27-27_400Hz-L9-chrp_pd.csv  23-06-04--12-06-48_400Hz-L9-chrp_nnposerr.csv  23-06-05--10-30-13_400Hz-L9-chrp_nnpos.csv
data/evaluation/3-flit/: 23-05-30--13-13-49_400Hz-L9-flit.csv  23-05-30--15-03-49_400Hz-L9-flit_real.csv  23-06-01--08-45-17_400Hz-L9-flit_pd.csv  23-06-04--12-08-02_400Hz-L9-flit_nnposerr.csv  23-06-05--10-31-41_400Hz-L9-flit_nnpos.csv
data/evaluation/4-nois/: 23-05-30--13-20-07_400Hz-L9-nois.csv  23-05-30--15-04-56_400Hz-L9-nois_real.csv  23-06-01--08-46-18_400Hz-L9-nois_pd.csv  23-06-04--12-09-14_400Hz-L9-nois_nnposerr.csv  23-06-05--10-33-12_400Hz-L9-nois_nnpos.csv
data/evaluation/5-mixd/: 23-05-30--13-21-32_400Hz-L9-mixd.csv  23-05-30--15-06-03_400Hz-L9-mixd_real.csv  23-05-31--16-13-06_400Hz-L9-mixd_pd.csv  23-05-31--16-16-34_400Hz-L9-mixd_nn.csv  23-06-02--12-47-20_400Hz-L9-mixd.csv  23-06-05--11-00-50_400Hz-L9-mixd_nnposerr.csv  23-06-05--11-00-56_400Hz-L9-mixd_nnpos.csv
data/experiments/: 23-03-06--13-31-59_L1-mixd.csv  23-03-07--14-20-29_L1-mixd.csv  23-03-08--09-17-20_L1-step.csv  23-03-08--09-18-42_L1-chrp.csv  23-03-08--09-19-50_L1-flit.csv  23-03-08--09-21-01_L1-mixd.csv  23-03-09--10-05-55_L2-step.csv  23-03-15--16-23-18_L9-step.csv  23-03-15--16-25-13_L9-chrp.csv  23-03-15--16-26-21_L9-flit.csv  23-03-15--16-29-42_L9-mixd.csv  23-03-15--16-32-28_L9-nois.csv  23-03-22--14-41-10_800Hz-L4-step.csv  23-03-22--14-42-59_800Hz-L2-step.csv  23-03-22--14-43-27_800Hz-L1-step.csv  23-03-22--14-44-20_800Hz-L0-step.csv  23-03-23--14-57-38_800Hz-L9-step.csv  23-03-23--15-12-14_800Hz-L4-step.csv  23-03-23--15-13-42_800Hz-L2-step.csv  23-03-23--15-14-43_800Hz-L1-step.csv  23-03-23--15-15-23_800Hz-L0-step.csv  23-03-27--11-18-00_800Hz-L2-nois.csv  23-03-27--11-18-33_800Hz-L2-mixd.csv  23-03-27--11-19-24_800Hz-L2-flit.csv  23-03-27--11-19-25_800Hz-L2-chrp.csv  23-03-27--11-19-26_800Hz-L2-step.csv
data/experiments/drone_arm/: 23-03-15--16-25-13_L9-chrp.csv
data/flight_data/: 23-02-08--15-04-52_ID0.csv  23-02-08--15-04-52_ID1.csv  23-02-08--15-04-52_ID2.csv  23-02-08--15-04-52_ID3.csv  23-02-08--15-04-52_ID4.csv  23-02-08--15-04-52_ID5.csv  23-02-08--16-16-47_ID0.csv  23-02-08--16-16-47_ID1.csv  23-02-08--16-16-47_ID2.csv  23-02-08--16-16-47_ID3.csv  23-02-08--16-16-47_ID4.csv  23-02-08--16-16-47_ID5.csv  23-02-08--17-58-39_ID0.csv  23-02-08--17-58-39_ID1.csv  23-02-08--17-58-39_ID2.csv  23-02-08--17-58-39_ID3.csv  23-02-08--17-58-39_ID4.csv  23-02-08--17-58-39_ID5.csv  23-02-08--18-12-22_ID0.csv  23-02-08--18-12-22_ID1.csv  23-02-08--18-12-22_ID2.csv  23-02-08--18-12-22_ID3.csv  23-02-08--18-12-22_ID4.csv  23-02-08--18-12-22_ID5.csv  23-02-08--20-00-11_ID0.csv  23-02-08--20-00-11_ID1.csv  23-02-08--20-00-11_ID2.csv  23-02-08--20-00-11_ID3.csv  23-02-08--20-00-11_ID4.csv  23-02-08--20-00-11_ID5.csv  aggressive.csv
data/models/23-05-30--13-15-30_400Hz-L9-flit-PHL08_Ta/: delta_250.pt  delta_500.pt
data/models/23-05-30--13-24-39_400Hz-L9-mixd-PHL08_Ta/: delta_250.pt  delta_500.pt
data/models/saved/23-05-30--14-48-22_400Hz-L9-mixd-PHL08_Ta/: delta_1000.pt  delta_1250.pt  delta_1500.pt  delta_1750.pt  delta_2000*.pt  delta_2000.pt  delta_2250.pt  delta_250.pt  delta_2500.pt  delta_2750.pt  delta_3000.pt  delta_3500.pt  delta_500.pt  delta_750.pt
data/models/saved/23-05-30--14-48-22_mixd-PHL05/: delta_0010.pt  (+13 more)
include/siesta/: experiment_parameters.h  input_signal_params.h  motor_specs.h
launch/: data_collection.launch  siesta_evaluation_gazebo.launch  test.launch
matlab/: compute_derivative.m  motor_impulse_sim.m  one_motor_impulse_sim.m  rocket.m
scripts/: compare_currents.py  compare_loads.py  compare_signals.py  evaluate_model.py  generate_input_signal.py  generate_input_signals.py  get_siesta_service.py  infer_model.py  kill_ros.sh  mlp.py  parse_ros_bag.py  plot_csv.py  plot_dataset.py  process_datasets.py  siesta_mlp.py  siesta_pd.py  siesta_pos.py  siesta_sysid.py  test.py
scripts/eugenios_script/: tester.py
scripts/old_scripts/: boubou_program.py  compare_loads.py  convert_to_double.py  convert_to_onnx.py  example_model.py  get_vgg_model.py  infer_model.py  parse_ros_bag.py  plot_input_signals.py  process_datasets.py
src/: dxl_quick_read_node.cpp  gazebo_read_node.cpp  gazebo_write_node.cpp  omav_dxl_poc.cpp  quick_read_node.cpp  quick_read_node.py  set_point_publisher_node.cpp  test_libtorch.cpp  test_node.cpp  test_onnx.cpp
srv/: GetSiesta.srv
(+43 files in other folders)
